@startuml
skin rose
skinparam backgroundColor #EEEBDC
left to right direction
hide circle
skinparam linetype ortho

entity User {
  Id : number <<PK>>
  --
  Email : varchar
  PasswordHash : varchar
  NotifyOnExpiration : boolean
  NotifyOnDeadline : boolean
  NotifyOnThreshold : boolean
  NotifyOnInsufficientResources : boolean
}

entity Catalog {
  Id : number <<PK>>
  --
  UserId : number <<FK>>
}

entity ItemType {
  Id : number <<PK>>
  --
  CatalogId : number <<FK>>
  --
  Name : varchar
  Description : varchar
  Category : varchar
  BaseMeasurementUnit : varchar
  DefaultQuantity : number
  Width : number
  Height : number
  Depth : number
  PictureName : varchar
  PictureSource : varchar
}

User    ||--|| Catalog
Catalog ||--o{ ItemType

@enduml
